--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>primer documento</h1>
-    <p>Lorem ipsum dolor sit amet.s</p>
+    <h1>DIEGO ES EL MEJOR DEL UNIVERSO</h1>
+    <p><strong>cada vez que diego se levanta el sol le da la bienvenida</strong></p>
     <p>Diego  es el mejor del universo</p>
 </body>
 </html>
