--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>DIEGO ES EL MEJOR DEL UNIVERSO</h1>
-    <p><strong>cada vez que diego se levanta el sol le da la bienvenida YES </strong></p>
+    <p><strong>cada vez que diego se levanta el sol le da la bienvenida YES on o </strong></p>
     <p>Diego  es el mejor del universo</p>
 </body>
 </html>
